New figures ready. Started rewriting paper

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -45,6 +45,9 @@
 Humans have been shown to adapt their movements when a sudden change to the dynamics of the environment is introduced, a phenomenon called motor adaptation. If the change is reverted, the adaptation is also quickly reverted. Human are also able to adapt to multiple changes in dynamics presented separately, and to be able to switch between adapted movements on the fly. Such switching relies on contextual information which is often noisy or misleading, which affects the switch between adaptations. In this work, we introduce a computational model to explain the behavioral phenomena effected by uncertain contextual information. Specifically, we present a hierarchical model for motor adaptation based on exact Bayesian inference. This model explicitly takes into account contextual information and how the dynamics of context inference affect adaptation and action selection. We show how the proposed model provides a unifying explanation for four different experimentally-established phenomena: (i) effects of sensory cues and proprioceptive information on switching between tasks, (ii) the effects of previously-learned adaptations on switching between tasks, (iii) the effects of training history on behavior in new contexts, in addition to (iv) the well-studied savings, de-adaptation and spontaneous recovery.
 
 
+Humans have been shown to adapt their movements when sudden or gradual changes to the dynamics of the environment are introduced, a phenomenon called motor adaptation. If the change is reverted, the adaptation is also quickly reverted. Human are also able to adapt to multiple changes in dynamics presented separately, and to be able to switch between adapted movements on the fly. Such switching relies on contextual information which is often noisy or misleading, which affects the switch between adaptations. Recently, the COIN computational model for motor adaptation and context inference was introduced, which contains explicit components of context inference and Bayesian motor adaptation. This model was used to show the effects of context inference on learning rates across different experiments. We expanded on that work by using the COIN model to show that the effects of context inference on motor adaptation and control go further than previously shown. Here, we used the COIN model to simulate classical motor adaptation experiments from previous works and showed that context inference, and how it is affected by the presence and reliability of feedback, effect a host of behavioral phenomena that had so far required multiple hypothesized mechanisms, lacking a unified explanation. Concretely, we show that the reliability of direct contextual information, as well as noisy sensory feedback, typical of many experiments, effect measurable changes in switching-task behavior, as well as in action selection, that stem directly from imprecise context inference. 
+
+
 \section{Introduction}
 It has been shown that humans can adapt motor commands to counteract changes in the dynamics of the environment and their own bodies, such as performing reaching movements with a weight attached to the wrist. This is known as motor adaptation. Moreover, human participants have been shown to adapt to different, even opposing, such changes during the course of a single experiment \citep{Gandolfo_Motor_1996,Shadmehr_Functional_1997}. Additionally, humans have been shown to dynamically switch between different learned adaptations \citep{Davidson_Scaling_2004,Ethier_Spontaneous_2008,Lee_Dual_2009}.
 
@@ -82,7 +85,7 @@ We now briefly describe the three components of the model separately. For clarit
 \end{figure}
 
 \subsubsection{Motor adaptation}
-It is widely accepted that in order to adapt motor commands to a novel environment, we create and update internal forward models of the outcomes of control signals \citep{Wolpert_Multiple_1998}. We used this principle and chose to make use of an exact Bayesian learner. To adapt to altered dynamics (e.g. a mechanical arm exerting a force on a participant's hand), our model updates the parameters $\phi$ (see Methods) of a context-specific forward model. These updates are done according to \eref{eqn:motor-adaptation}, using the difference between predictions made with the current parameters of the forward model, and the current observation. With this, a posterior estimate on $\phi$, $q(\phi)$ in \fref{fig:model}, is calculated after each trial.
+It is widely accepted that in order to adapt motor commands to a novel environment, we create and update internal forward models of the outcomes of control signals \citep{Wolpert_Multiple_1998}. We used this principle and chose to make use of an exact Bayesian learner. To adapt to altered dynamics (e.g. a mechanical arm exerting a force on a participant's hand), our model updates the parameters $\phi$ (see Methods) of a context-specific forward model. These updates are done according to \eref{eqn:update-full}, using the difference between predictions made with the current parameters of the forward model, and the current observation. With this, a posterior estimate on $\phi$, $q(\phi)$ in \fref{fig:model}, is calculated after each trial.
 
 \subsubsection{Context inference}
 To infer the adequate forward model to deploy, most previous models \cite[e.g.][]{Wolpert_Multiple_1998,Imamizu_Neural_2008,Oh_Minimizing_2019} have focused on the elements of the context which are directly related to the forward models: the model that best predicts the current observation given the past is deemed to be the ``correct'' model, i.e. the model that best represents the current context. \cite{Imamizu_Explicit_2007} expanded on this idea by showing the effects of visual cues on model switching.
